Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -12,12 +12,11 @@
 
 Будучи многопользовательской системой, Linux нужен какой-то способ отслеживать, кому принадлежит каждый файл и разрешено ли 
 пользователю выполнять действия с файлом. Это необходимо для обеспечения конфиденциальности пользователей, которые могут 
-захотеть сохранить конфиденциальность содержимого своих файлов, а также для обеспечения совместной работы, сделав определенные 
-файлы доступными для нескольких пользователей.
+захотеть сохранить конфиденциальность содержимого своих файлов, а также для обеспечения совместной работы, сделав определенные файлы доступными для нескольких пользователей.
 
-Это делается через трехуровневую систему разрешений. Каждый файл на диске принадлежит пользователю и группе пользователей и 
+Это делается через трехуровневую систему прав. Каждый файл на диске принадлежит пользователю и группе пользователей и 
 имеет три набора разрешений: один для своего владельца, один для группы, которая владеет файлом, и один для всех остальных. 
-В этом уроке вы узнаете, как запрашивать разрешения для файла, значение этих разрешений и как ими управлять.
+В этом уроке вы узнаете, как вывести на экран права доступа к файлам, значение этих прав и как ими управлять.
 
 
 # Запрос информации о файлах и каталогах
@@ -40,4 +39,119 @@ drwxrwxr-x 2 carol carol   4096 Dec 10 15:57 Another_Directory
 Каждый столбец в выходных данных выше имеет значение. Давайте посмотрим на столбцы, относящиеся к этому уроку.
 * Первый *столбец* в листинге показывает тип файла и права доступа. Например, `на drwxrwxr-x`:
     * Первый символ `d` указывает тип файла.
-    * Следующие три символа, `rwx`, указывают права доступа для владельца файла, также называемого пользователем или `u`.
+    * Следующие три символа, `rwx`, указывают права доступа для владельца файла, также называемого `пользователем` или `u`.
+    * Следующие три символа, `rwx`, указывают права доступа для `группы`, владеющей файлом, также называемой `g`.
+    * Последние три символа, `r-x`, обозначают права доступа для всех остальных, также известных как `другие` или `o`.
+
+>Также часто можно услышать, что `другие` права доступа называются правами для всего `мира`, например, «Все остальные в мире имеют эти права доступа».
+
+Во `втором` столбце указано количество жестких ссылок, указывающих на этот файл. `Пятый` столбец показывает размер файла. `Шестой` столбец показывает дату и время последнего изменения файла. Но эти столбцы не актуальны для текущей темы.
+
+
+# А как насчет каталогов?
+
+Если вы попытаетесь запросить информацию о каталоге с помощью `ls -l`, вместо этого он покажет вам список содержимого каталога:
+```
+$ ls -l Another_Directory/
+total 0
+-rw-r--r-- 1 carol carol 0 Dec 10 17:59 another_file.txt
+```
+Чтобы избежать этого и запросить информацию о самом каталоге, добавьте параметр `-d` в `ls`:
+```
+$ ls -l -d Another_Directory/
+drwxrwxr-x 2 carol carol 4096 Dec 10 17:59 Another_Directory/
+```
+
+
+# Просмотр скрытых файлов
+
+Список каталогов, который мы получили с помощью `ls -l` ранее, неполон:
+```
+$ ls -l
+total 544
+drwxrwxr-x 2 carol carol   4096 Dec 10 17:59 Another_Directory
+-rw------- 1 carol carol 539663 Dec 10 10:43 picture.jpg
+-rw-rw-r-- 1 carol carol   1881 Dec 10 15:57 text.txt
+```
+В этом каталоге есть еще три файла, но они скрыты. В Linux файлы, имена которых начинаются с точки (`.`), Автоматически скрываются. Чтобы увидеть их, нам нужно добавить параметр `-a` в `ls`:
+```
+$ ls -l -a
+total 544
+drwxrwxr-x 3 carol carol   4096 Dec 10 16:01 .
+drwxrwxr-x 4 carol carol   4096 Dec 10 15:56 ..
+drwxrwxr-x 2 carol carol   4096 Dec 10 17:59 Another_Directory
+-rw------- 1 carol carol 539663 Dec 10 10:43 picture.jpg
+-rw-rw-r-- 1 carol carol   1881 Dec 10 15:57 text.txt
+-rw-r--r-- 1 carol carol      0 Dec 10 16:01 .thisIsHidden
+```
+Файл `.thisIsHidden` просто скрыт, потому что его имя начинается с `.`.
+
+Директории `.` и `..` особенные. `.` указатель на текущий каталог. А `..` - это указатель на родительский каталог, в котором находится текущий. В Linux каждый каталог содержит по крайней мере эти два каталога.
+
+>Вы можете комбинировать несколько параметров для `ls` (и многих других команд Linux). Например, `ls -l -a` можно записать как `ls -la`.
+
+
+# Понимание типов файлов
+
+Мы уже упоминали, что первая буква в каждом выводе `ls -l` описывает тип файла. Три наиболее распространенных типа файлов:
+
+`-` (обычный файл)
+>Файл может содержать данные любого типа и помогать управлять этими данными. Файлы можно изменять, перемещать, копировать и удалять.
+
+`d` (каталог)
+>Каталог содержит другие файлы или каталоги и помогает организовать файловую систему. Технически каталоги - это особый вид файлов.
+
+`l` (символическая ссылка)
+>Этот «файл» является указателем на другой файл или каталог в другом месте файловой системы.
+
+В дополнение к ним есть еще три типа файлов, о которых вы должны хотя бы знать, но которые выходят за рамки этого урока:
+
+`b` (блочное устройство)
+>В дополнение к ним есть еще три типа файлов, о которых вы должны хотя бы знать, но которые выходят за рамки этого урока:
+
+`c` (символьное устройство)
+>Этот файл обозначает виртуальное или физическое устройство. Терминалы (например, основной терминал на ``/dev/ ttyS0) и последовательные порты являются типичными примерами символьных устройств.
+
+`s` (сокет)
+>Сокеты служат «проводниками» для передачи информации между двумя программами.
+
+>Не изменяйте никакие разрешения для блочных устройств, символьных устройств или сокетов, если вы не знаете, что делаете. Это может помешать вашей системе работать!
+
+
+# Понимание прав доступа
+
+В выводе команды `ls -l` права доступа к файлу отображаются сразу после типа файла в виде трех групп по три символа в каждой в порядке `r`, `w` и `x`. Вот что они означают. Имейте в виду, что прочерк - это отсутствие разрешения.
+
+
+# Права доступа на файлы
+
+`r`
+>Обозначает `чтение` и имеет восьмеричное значение `4` (не волнуйтесь, мы скоро обсудим восьмеричные числа). Это означает разрешение на открытие файла и чтение его содержимого.
+
+`w`
+>Обозначает `запись` и имеет восьмеричное значение `2`. Это означает разрешение на редактирование или удаление файла.
+
+`x`
+>Обозначает `выполнение` и имеет восьмеричное значение `1`. Это означает, что файл может быть запущен как исполняемый файл или сценарий.
+
+
+# Права доступа на каталоги
+
+`r`
+>Обозначает `чтение` и имеет восьмеричное значение `4`. Это означает разрешение на чтение содержимого каталога, например имен файлов. Но это не означает разрешения на чтение самих файлов.
+
+`w`
+>Обозначает `запис` и имеет восьмеричное значение `2`. Это означает разрешение на создание или удаление файлов в каталоге или изменение их имен, разрешений и владельцев.
+
+Если у пользователя есть разрешение `w` для каталога, он может изменять права доступа к любому файлу в каталоге (`содержимое` каталога), даже если у пользователя нет разрешений на этот файл или если файл принадлежит другому пользователю.
+
+Имейте в виду, что наличие прав на запись в каталог или файл не означает, что у вас есть разрешение на удаление или переименование самого каталога или файла.
+
+`x`
+>Обозначает `выполнение` и имеет восьмеричное значение `1`. Это означает разрешение на вход в каталог, но не на перечисление его файлов (для этого требуется `r`).
+
+Последнее о каталогах может показаться немного запутанным. Представим, например, что у вас есть каталог с именем `Another_Directory` со следующими разрешениями:
+```
+$ ls -ld Another_Directory/
+d--x--x--x 2 carol carol 4,0K Dec 20 18:46 Another_Directory
+```
