Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -141,7 +141,7 @@ drwxrwxr-x 2 carol carol   4096 Dec 10 17:59 Another_Directory
 >Обозначает `чтение` и имеет восьмеричное значение `4`. Это означает разрешение на чтение содержимого каталога, например имен файлов. Но это не означает разрешения на чтение самих файлов.
 
 `w`
->Обозначает `запис` и имеет восьмеричное значение `2`. Это означает разрешение на создание или удаление файлов в каталоге или изменение их имен, разрешений и владельцев.
+>Обозначает `запись` и имеет восьмеричное значение `2`. Это означает разрешение на создание или удаление файлов в каталоге или изменение их имен, разрешений и владельцев.
 
 Если у пользователя есть разрешение `w` для каталога, он может изменять права доступа к любому файлу в каталоге (`содержимое` каталога), даже если у пользователя нет разрешений на этот файл или если файл принадлежит другому пользователю.
 
@@ -155,3 +155,26 @@ drwxrwxr-x 2 carol carol   4096 Dec 10 17:59 Another_Directory
 $ ls -ld Another_Directory/
 d--x--x--x 2 carol carol 4,0K Dec 20 18:46 Another_Directory
 ```
+Также представьте, что внутри этого каталога у вас есть сценарий оболочки с именем `hello.sh`:
+```
+-rwxr-xr-x 1 carol carol 33 Dec 20 18:46 hello.sh
+```
+Если вы пользователь `carol` и попытаетесь перечислить содержимое `Another_Directory`, вы получите сообщение об ошибке, так как у вашего пользователя нет прав на чтение для этого каталога:
+```
+$ ls -l Another_Directory/
+ls: cannot open directory 'Another_Directory/': Permission denied
+```
+Однако у пользователя `carol` есть разрешения на выполнение, что означает, что она может войти в каталог. Следовательно, пользователь `carol` может получить доступ к файлам внутри каталога, если у нее есть правильные разрешения для соответствующего файла. Предположим, у пользователя есть полные права доступа (rwx) для скрипта `hello.sh`. Затем она может запустить сценарий, даже если она не может прочитать содержимое каталога, в котором он находится, если ей известно полное имя файла:
+```
+$ sh Another_Directory/hello.sh
+Hello LPI World!
+```
+Как мы уже говорили ранее, разрешения указываются последовательно: сначала для владельца файла, затем для группы-владельца, а затем для других пользователей. Всякий раз, когда кто-то пытается выполнить действие с файлом, разрешения проверяются таким же образом.
+
+Сначала система проверяет, является ли текущий пользователь владельцем файла, если да, то применяет только первый набор прав. В противном случае он проверяет, принадлежит ли текущий пользователь к группе, владеющей файлом. В этом случае применяется только второй набор прав доступа. В любом другом случае система применит третий набор прав.
+
+Это означает, что если текущий пользователь является владельцем файла, действуют только права доступа владельца, даже если права группы или другие права более высокие, чем права владельца.
+
+
+# Изменение прав доступа к файлам
+
