Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -178,3 +178,25 @@ Hello LPI World!
 
 # Изменение прав доступа к файлам
 
+Команда `chmod` используется для изменения разрешений для файла и принимает как минимум два параметра: первый описывает, какие права нужно изменить, а второй указывает на файл или каталог, в котором будет сделано изменение. Имейте в виду, что только владелец файла или системный администратор (root) может изменять права доступа к файлу.
+
+Разрешения на изменение можно описать двумя разными способами, или «режимами».
+
+Первый, называемый *symbolic mode*(символьным режимом), предлагает детальный контроль, позволяющий добавлять или отзывать одно разрешение без изменения других в наборе. Другой режим, называемый *octal mode*(восьмеричным), легче запомнить и быстрее использовать, если вы хотите установить все значения разрешений сразу.
+
+Оба режима приведут к одному и тому же конечному результату. Так, например, команды:
+```
+$ chmod ug+rw-x,o-rwx text.txt
+```
+и
+```
+$ chmod 660 text.txt
+```
+выдаст точно такой же результат, файл с установленными разрешениями:
+```
+-rw-rw---- 1 carol carol  765 Dec 20 21:25 text.txt
+```
+Теперь давайте посмотрим, как работает каждый режим.
+
+
+# Символический режим
