Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -200,3 +200,46 @@ $ chmod 660 text.txt
 
 
 # Символический режим
+
+При описании разрешений, которые нужно изменить в символьном режиме, первые символы указывают, чьи разрешения вы измените: для пользователя (`u`), для группы (`g`), для других (`o`) и/или для все (`а`).
+
+Затем вам нужно указать команде, что делать: вы можете предоставить разрешение (`+`), отозвать разрешение (`-`) или установить для него определенное значение (`=`).
+
+Наконец, вы указываете, какое разрешение вы хотите использовать: чтение (`r`), запись (`w`) или выполнение (`x`). Например, представьте, что у нас есть файл с именем `text.txt` со следующим набором разрешений:
+```
+$ ls -l text.txt
+-rw-r--r-- 1 carol carol 765 Dec 20 21:25 text.txt
+```
+Если вы хотите предоставить разрешения на запись членам группы, владеющей файлом, вы должны использовать параметр `g+w`. Будет проще, если вы подумаете об этом так: «Группе (`g`) предоставить (`+`) права на запись (`w`)». Итак, команда будет такой:
+```
+$ chmod g+w text.txt
+```
+Давайте проверим результат с помощью `ls`:
+```
+$ ls -l text.txt
+-rw-rw-r-- 1 carol carol 765 Dec 20 21:25 text.txt
+```
+Вы хотите удалить разрешения на чтение для владельца того же файла? Подумайте об этом так: «Для пользователя (`u`) отозвать (`-`) права на чтение (`r`)». Итак, параметр `u-r`, вот так:
+```
+$ chmod u-r text.txt
+$ ls -l text.txt
+--w-rw-r-- 1 carol carol 765 Dec 20 21:25 text.txt
+```
+Что, если мы хотим установить разрешения точно так же, как `rw-` для всех? Тогда подумайте об этом так: «Для всех (`a`) установите точно (`=`) read (`r`), write (`w`) и no execute (`-`)». Так:
+```
+$ chmod a=rw- text.txt
+$ ls -l text.txt
+-rw-rw-rw- 1 carol carol 765 Dec 20 21:25 text.txt
+```
+Конечно, можно изменить несколько разрешений одновременно. В этом случае разделите их запятой (`,`):
+```
+$ chmod u+rwx,g-x text.txt
+$ ls -lh text.txt
+-rwxrw-rw- 1 carol carol 765 Dec 20 21:25 text.txt
+```
+Приведенный выше пример можно прочитать как: «Для пользователя (`u`) предоставить (`+`) разрешения на чтение, запись и выполнение (`rwx`), для группы (`g`) отменить (`-`) разрешения на выполнение (`x`)».
+
+При запуске в каталоге `chmod` изменяет только разрешения каталога. `chmod` также имеет рекурсивный режим, который полезен, когда вы хотите изменить разрешения для «всех файлов внутри каталога и его подкаталогов». Чтобы использовать это, добавьте параметр `-R` после имени команды перед изменяемыми разрешениями:
+```
+$ chmod -R u+rwx Another_Directory/
+```
