Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -243,3 +243,81 @@ $ ls -lh text.txt
 ```
 $ chmod -R u+rwx Another_Directory/
 ```
+Эту команду можно читать как: «Рекурсивно (`-R`), для пользователя (`u`), предоставить (`+`) разрешения на чтение, запись и выполнение (`rwx`)».
+
+>Будьте осторожны и дважды подумайте, прежде чем использовать переключатель `-R`, поскольку легко изменить разрешения для файлов и каталогов, которые вы не хотите изменять, особенно для каталогов с большим количеством файлов и подкаталогов.
+
+
+# Восьмеричный режим
+
+В *восьмеричном режиме* разрешения указываются по-другому: как трехзначное значение в восьмеричной системе счисления, в системе счисления с основанием 8.
+
+У каждого разрешения есть соответствующее значение, и они указываются в следующем порядке: сначала идет чтение (`r`), которое равно `4`, затем запись (`w`), которое равно `2`, и последнее, выполнение (`x`), представленное `1`. Если разрешения нет, используйте нулевое значение (`0`). Итак, разрешение `rwx` будет `7` (`4+2+1`), а `r-x` будет `5` (`4+0+1`).
+
+Первая из трех цифр в наборе разрешений представляет разрешения для пользователя (`u`), вторая - для группы (`g`), а третья - для других (`o`). Если бы мы хотели установить права доступа для файла на `rw-rw---` - восьмеричное значение было бы `660`:
+```
+$ chmod 660 text.txt
+$ ls -l text.txt
+-rw-rw---- 1 carol carol 765 Dec 20 21:25 text.txt
+```
+Помимо этого, синтаксис в восьмеричном режиме такой же, как и в символьном режиме, первый параметр представляет разрешения, которые вы хотите изменить, а второй параметр указывает на файл или каталог, в котором будет выполнено изменение.
+>Если значение разрешения *нечетное*, файл обязательно является исполняемым!
+
+Какой синтаксис использовать? *Восьмеричный режим* рекомендуется, если вы хотите изменить права доступа на определенное значение, например 640 (`rw- r-- ---`). 
+
+*Символьный режим* более полезен, если вы хотите изменить только определенное значение, независимо от текущих прав на файл. Например, вы можете добавить права на выполнение для пользователя, используя только `chmod u+x script.sh`, без учета или даже без учета текущих прав для группы и других.
+
+
+# Изменение владельца файла
+
+Команда `chown` используется для изменения владельца файла или каталога. Синтаксис довольно прост:
+```
+chown USERNAME:GROUPNAME FILENAME
+```
+Например, давайте проверим файл с именем `text.txt`:
+```
+$ ls -l text.txt
+-rw-rw---- 1 carol carol 1881 Dec 10 15:57 text.txt
+```
+Пользователь, которому принадлежит файл, - `carol`, и группа - также `carol`. Теперь мы изменим группу, владеющую файлом, на другую группу, например, `students`:
+```
+$ chown carol:students text.txt
+$ ls -l text.txt
+-rw-rw---- 1 carol students 1881 Dec 10 15:57 text.txt
+```
+Имейте в виду, что пользователь, владеющий файлом, не обязательно должен принадлежать к группе, владеющей файлом. В приведенном выше примере пользователю `carol` не обязательно быть членом группы `students`.
+
+Права доступа пользователя или группы можно не указывать, если вы не хотите их изменять. Итак, чтобы изменить только группу, владеющую файлом, вы должны использовать `chown :student text.txt`. Чтобы изменить только пользователя, используйте команду `chown carol: text.txt` или просто `chown carol text.txt`. В качестве альтернативы для изменения группы вы можете использовать команду `chgrp student text.txt`.
+
+Если вы не являетесь системным администратором (root), вы не можете передать владельца файла другому пользователю или группе, к которой вы не принадлежите. Если вы попытаетесь это сделать, вы получите сообщение об ошибке `Operation not permitted`.
+
+
+# Работа с группами
+
+Перед изменением владельца файла может быть полезно узнать, какие группы существуют в системе, какие пользователи являются членами группы и к каким группам принадлежит пользователь.
+
+Чтобы увидеть, какие группы существуют в вашей системе, введите `getent group`. Вывод будет похож на этот (вывод был сокращен):
+```
+$ getent group
+root:x:0:
+daemon:x:1:
+bin:x:2:
+sys:x:3:
+adm:x:4:syslog,rigues
+tty:x:5:rigues
+disk:x:6:
+lp:x:7:
+mail:x:8:
+news:x:9:
+uucp:x:10:rigues
+```
+Если вы хотите знать, к каким группам принадлежит пользователь, добавьте имя пользователя в качестве параметра в группы:
+```
+$ groups carol
+carol : carol students cdrom sudo dip plugdev lpadmin sambashare
+```
+Чтобы сделать обратное (посмотреть, какие пользователи принадлежат к группе), используйте `groupmems`. Параметр `-g` указывает группу, а `-l` перечислит всех ее членов:
+```
+# groupmems -g cdrom -l
+carol
+```
