Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -321,3 +321,28 @@ carol : carol students cdrom sudo dip plugdev lpadmin sambashare
 # groupmems -g cdrom -l
 carol
 ```
+>`groupmems` может быть запущен только как root, системный администратор. Если вы в настоящее время не вошли в систему как root, добавьте `sudo` перед командой.
+
+
+# Права доступа по умолчанию
+
+Попробуем эксперимент. Откройте окно терминала и создайте пустой файл с помощью следующей команды:
+```
+$ touch testfile
+```
+Теперь давайте посмотрим на разрешения для этого файла. Они могут отличаться в вашей системе, но предположим, что они выглядят следующим образом:
+```
+$ ls -lh testfile
+-rw-r--r-- 1 carol carol 0 jul 13 21:55 testfile
+```
+Права: `rw- r-- r--`: *чтение* и *запись* для пользователя и *чтение* для группы и других, или `644` в восьмеричном режиме. Теперь попробуйте создать каталог:
+```
+$ mkdir testdir
+$ ls -lhd testdir
+drwxr-xr-x 2 carol carol 4,0K jul 13 22:01 testdir
+```
+Теперь права равны `rwxr-xr-x`: *чтение*, *запись* и *выполнение* для пользователя, *чтение* и *выполнение* для группы и других или 755 в символьном режиме.
+
+Независимо от того, где вы находитесь в файловой системе, каждый файл или каталог, который вы создаете, получат те же права. Вы когда-нибудь задумывались, откуда они?
+
+Они исходят из маски пользователя или `umask`, которая устанавливает права по умолчанию для каждого создаваемого файла. Вы можете проверить текущие значения с помощью команды umask:
