Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -346,3 +346,66 @@ drwxr-xr-x 2 carol carol 4,0K jul 13 22:01 testdir
 Независимо от того, где вы находитесь в файловой системе, каждый файл или каталог, который вы создаете, получат те же права. Вы когда-нибудь задумывались, откуда они?
 
 Они исходят из маски пользователя или `umask`, которая устанавливает права по умолчанию для каждого создаваемого файла. Вы можете проверить текущие значения с помощью команды umask:
+```
+$ umask
+0022
+```
+Но это не похоже на `rw-r-- r--` или даже на `644`. Возможно, нам стоит попробовать с параметром `-S`, чтобы получить вывод в символьном режиме:
+```
+$ umask -S
+u=rwx,g=rx,o=rx
+```
+Это те же права, которые наш тестовый каталог получил в одном из приведенных выше примеров. Но почему, когда мы создавали файл, права доступа были другими?
+
+Что ж, нет смысла устанавливать глобальные разрешения на выполнение для всех в любом файле по умолчанию, верно? Для каталогов требуются разрешения на выполнение (иначе вы не сможете в них попасть), а для файлов - нет, поэтому они их не получают. Следовательно, `rw-r--r--`.
+
+Помимо отображения разрешений по умолчанию, umask также может использоваться для их изменения для текущего сеанса оболочки. Например, если мы воспользуемся командой:
+```
+$ umask u=rwx,g=rwx,o=
+```
+Каждый новый каталог унаследует разрешения `rwxrwx---` и каждый файл `rw-rw----` (поскольку они не получают разрешения на выполнение). Если вы повторите приведенные выше примеры, чтобы создать `testfile` и `testdir` и проверить разрешения, вы должны получить:
+```
+$ ls -lhd test*
+drwxrwx--- 2 carol carol 4,0K jul 13 22:25 testdir
+-rw-rw---- 1 carol carol    0 jul 13 22:25 testfile
+```
+И если вы проверите `umask` без параметра `-S`(символьный режим), вы получите:
+```
+$ umask
+0007
+```
+Результат не выглядит знакомым, потому что используются другие значения. Вот таблица с каждым значением и его соответствующим значением:
+|:Значение |:Права доступа к файлам |:Права доступа к директориям |
+|:---------|:-----------------------|:----------------------------|
+| `0`      | `rw-`                  | `rwx`                       |
+| `1`      | `rw-`                  | `rw-`                       |
+| `2`      | `r--`                  | `r-x`                       |
+| `3`      | `r--`                  | `r--`                       |
+| `4`      | `-w-`                  | `-wx`                       |
+| `5`      | `-w-`                  | `-w-`                       |
+| `6`      | `---`                  | `--x`                       |
+| `7`      | `---`                  | `---`                       |
+
+Как видите, `007` соответствует `rwxrwx ---`, как мы и просили. Начальный ноль можно игнорировать.
+
+
+# Особые права доступа
+
+Помимо разрешений на чтение, запись и выполнение для пользователя, группы и других, каждый файл может иметь *особые права доступа*, которые могут изменять способ работы каталога или выполнение программы. Они могут быть указаны в символьном или восьмеричном формате и выглядят следующим образом:
+
+## Sticky Bit
+
+The Sticky Bit, также *называемый флагом ограниченного удаления*(restricted deletion flag), имеет восьмеричное значение `1` и в символьном режиме представлен буквой `t` в разрешениях другого пользователя. Это применимо только к каталогам и не влияет на обычные файлы. В Linux он не позволяет пользователям удалять или переименовывать файл в каталоге, если он не владеет этим файлом или каталогом.
+
+Каталоги с установленным Sticky Bit показывают замену `x` на правах для `остальных` при выводе `ls -l`:
+```
+$ ls -ld Sample_Directory/
+drwxr-xr-t 2 carol carol 4096 Dec 20 18:46 Sample_Directory/
+```
+В восьмеричном режиме особые разрешения указываются с использованием 4-значного обозначения, при этом первая цифра представляет собой специальное право на выполнение. Например, чтобы установить Sticky Bit (значение `1`) для каталога `Another_Directory` в восьмеричном режиме с разрешениями `755`, команда будет выглядеть так:
+```
+$ chmod 1755 Another_Directory
+$ ls -ld Another_Directory
+drwxr-xr-t 2 carol carol 4,0K Dec 20 18:46 Another_Directory
+```
+
