Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -395,7 +395,7 @@ $ umask
 
 ## Sticky Bit
 
-The Sticky Bit, также *называемый флагом ограниченного удаления*(restricted deletion flag), имеет восьмеричное значение `1` и в символьном режиме представлен буквой `t` в разрешениях другого пользователя. Это применимо только к каталогам и не влияет на обычные файлы. В Linux он не позволяет пользователям удалять или переименовывать файл в каталоге, если он не владеет этим файлом или каталогом.
+The Sticky Bit, также *называемый флагом ограниченного удаления*(restricted deletion flag), имеет восьмеричное значение `1` и в символьном режиме представлен буквой `t` в правах доступа для остальных пользователей. Его можно применять только к каталогам и он не влияет на обычные файлы. В Linux он не позволяет пользователям удалять или переименовывать файл в каталоге, если они не владеют этим файлом или каталогом.
 
 Каталоги с установленным Sticky Bit показывают замену `x` на правах для `остальных` при выводе `ls -l`:
 ```
@@ -409,3 +409,75 @@ $ ls -ld Another_Directory
 drwxr-xr-t 2 carol carol 4,0K Dec 20 18:46 Another_Directory
 ```
 
+## SGID
+
+Установка GID, также известный как SGID или бит Set Group ID, имеет восьмеричное значение 2 и в символьном режиме представлен буквой `s` в правах доступа для `группы`. Его можно применять к исполняемым файлам или каталогам. В файлах он заставит процесс запускаться с привилегиями группы, владеющей файлом. При применении к каталогам каждый созданный в нем файл или каталог наследует группу из родительского каталога.
+
+Файлы и каталоги с битом SGID заменяются на `s` вместо `x` в правах доступа для `группы` при выводе `ls -l`:
+```
+$ ls -l test.sh
+-rwxr-sr-x 1 carol carol 33 Dec 11 10:36 test.sh
+```
+Чтобы добавить разрешения SGID к файлу в символьном режиме, используйте следующую команду:
+```
+$ chmod g+s test.sh
+$ ls -l test.sh
+-rwxr-sr-x 1 carol root     33 Dec 11 10:36 test.sh
+```
+Следующий пример поможет вам лучше понять влияние SGID на каталог. Предположим, у нас есть каталог `Sample_Directory`, принадлежащий пользователю `carol` и группе `users`, со следующей структурой разрешений:
+```
+$ ls -ldh Sample_Directory/
+drwxr-xr-x 2 carol users 4,0K Jan 18 17:06 Sample_Directory/
+```
+Теперь давайте перейдем в этот каталог и с помощью команды `touch` создадим внутри него пустой файл. Результат будет:
+```
+$ cd Sample_Directory/
+$ touch newfile
+$ ls -lh newfile
+-rw-r--r-- 1 carol carol 0 Jan 18 17:11 newfile
+```
+Как мы видим, файл принадлежит пользователю `carol` и группе `carol`. Но если бы для каталога было установлено разрешение SGID, результат был бы другим. Во-первых, давайте добавим бит SGID в `Sample_Directory` и проверим результаты:
+```
+$ sudo chmod g+s Sample_Directory/
+$ ls -ldh Sample_Directory/
+drwxr-sr-x 2 carol users 4,0K Jan 18 17:17 Sample_Directory/
+```
+Символ `s` в разрешениях группы указывает, что бит SGID установлен. Теперь мы перейдем в этот каталог и снова создадим пустой файл с помощью команды `touch`:
+```
+$ cd Sample_Directory/
+$ touch emptyfile
+$ ls -lh emptyfile
+ -rw-r--r-- 1 carol users 0 Jan 18 17:20 emptyfile
+ ```
+Группа, которой принадлежит файл, - это `users`. Это связано с тем, что бит SGID заставил файл наследовать группу-владельца своего родительского каталога, то есть `users`.
+
+## SUID
+
+SUID, также известный как Set User ID, имеет восьмеричное значение `4` и представлен буквой `s` в правах доступа для пользователя в символьном режиме. Он применяется только к файлам и не влияет на каталоги. Его поведение аналогично биту SGID, но процесс будет выполняться с привилегиями пользователя, владеющего файлом. Файлы с битом SUID заменяют `x` на `s` в правах для пользователя, при выводе `ls -l`:
+```
+$ ls -ld test.sh
+-rwsr-xr-x 1 carol carol 33 Dec 11 10:36 test.sh
+```
+Вы можете объединить несколько специальных прав для одного параметра. Итак, чтобы установить SGID (значение `2`) и SUID (значение `4`) в восьмеричном режиме для скрипта `test.sh` с разрешениями `755`, вы должны ввести:
+```
+$ chmod 6755 test.sh
+```
+И результат будет:
+```
+$ ls -lh test.sh
+-rwsr-sr-x 1 carol carol 66 Jan 18 17:29 test.sh
+```
+>Если ваш терминал поддерживает цвет, а в наши дни большинство из них поддерживает, вы можете быстро увидеть, установлены ли эти специальные разрешения, взглянув на вывод `ls -l`. Для sticky bit имя каталога отображаестя черным шрифтом с синим фоном. То же самое относится к файлам с битами SGID (желтый фон) и SUID (красный фон). Цвета могут отличаться в зависимости от того, какой дистрибутив Linux и какие настройки терминала вы используете.
+
+
+
+# Упражнения для закрепления
+
+
+# Упражнения на размышления
+
+
+# Ответы на упражнения для закрепления
+
+
+# Ответы на упражнения для размышления
