Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -470,8 +470,36 @@ $ ls -lh test.sh
 >Если ваш терминал поддерживает цвет, а в наши дни большинство из них поддерживает, вы можете быстро увидеть, установлены ли эти специальные разрешения, взглянув на вывод `ls -l`. Для sticky bit имя каталога отображаестя черным шрифтом с синим фоном. То же самое относится к файлам с битами SGID (желтый фон) и SUID (красный фон). Цвета могут отличаться в зависимости от того, какой дистрибутив Linux и какие настройки терминала вы используете.
 
 
-
 # Упражнения для закрепления
+
+1. Создайте каталог с именем `emptydir`, используя команду `mkdir emptydir`. Теперь, используя `ls`, выведите список разрешений для каталога emptydir.
+2. Создайте пустой файл с именем `emptyfile` с помощью команды `touch emptyfile`. Теперь, используя `chmod` в символьном режиме, добавьте разрешения на выполнение для владельца файла `emptyfile` и удалите права доступа на запись и выполнение для всех остальных. Сделайте это, используя только одну команду chmod.
+3. Какими будут разрешения по умолчанию для файла, если значение `umask` установлено на `020`?
+4. Предположим, файл с именем `test.sh` является сценарием оболочки со следующими разрешениями и владельцем: 
+```
+-rwxr-sr-x 1 carol root     33 Dec 11 10:36 test.sh
+```
+* Какие разрешения у владельца файла?
+* Используя восьмеричную нотацию, каков будет синтаксис `chmod`, чтобы «отменить» специальное разрешение, предоставленное этому файлу?
+
+5. Рассмотрим этот файл:
+```
+$ ls -l /dev/sdb1
+brw-rw---- 1 root disk 8, 17 Dec 21 18:51 /dev/sdb1
+```
+Какой тип файла - sdb1? Кто может писать в этот файл?
+6. Рассмотрим следующие 4 файла:
+```
+drwxr-xr-t 2 carol carol 4,0K Dec 20 18:46 Another_Directory
+----r--r-- 1 carol carol    0 Dec 11 10:55 foo.bar
+-rw-rw-r-- 1 carol carol 1,2G Dec 20 18:22 HugeFile.zip
+drwxr-sr-x 2 carol users  4,0K Jan 18 17:26 Sample_Directory
+```
+Запишите соответствующие разрешения для каждого файла и каталога в восьмеричном режиме с использованием 4-значного обозначения.
+|`Another_Directory`||
+|`foo.bar`||
+|`HugeFile.zip`||
+|`Sample_Directory`||
 
 
 # Упражнения на размышления
