--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -496,12 +496,14 @@ drwxr-xr-t 2 carol carol 4,0K Dec 20 18:46 Another_Directory
 drwxr-sr-x 2 carol users  4,0K Jan 18 17:26 Sample_Directory
 ```
 Запишите соответствующие разрешения для каждого файла и каталога в восьмеричном режиме с использованием 4-значного обозначения.
-|||
-|:---------------------------------------------|:----------------------------------------------|
-|`Another_Directory`||
-|`foo.bar`||
-|`HugeFile.zip`||
-|`Sample_Directory`||
+
+`Another_Directory`
+
+`foo.bar`
+
+`HugeFile.zip`
+
+`Sample_Directory`
 
 
 # Упражнения на размышления
