Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -487,7 +487,8 @@ $ ls -lh test.sh
 $ ls -l /dev/sdb1
 brw-rw---- 1 root disk 8, 17 Dec 21 18:51 /dev/sdb1
 ```
-Какой тип файла - sdb1? Кто может писать в этот файл?
+Какой тип файла - `sdb1`? Кто может писать в этот файл?
+
 6. Рассмотрим следующие 4 файла:
 ```
 drwxr-xr-t 2 carol carol 4,0K Dec 20 18:46 Another_Directory
