Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -509,6 +509,21 @@ drwxr-sr-x 2 carol users  4,0K Jan 18 17:26 Sample_Directory
 
 # Упражнения на размышления
 
+1. Попробуйте это на терминале: создайте пустой файл с именем `emptyfile` с помощью команды `touch emptyfile`. Теперь «обнулите» права доступа к файлу с `chmod 000 emptyfile`. Что произойдет, если вы измените разрешения для `emptyfile`, передав только *одно* значение для `chmod` в восьмеричном режиме, например `chmod 4 emptyfile`? А если использовать два, как в `chmod 44 emptyfile`? Что мы можем узнать о том, как `chmod` считывает числовое значение?
+2. Рассмотрим права доступа для временного каталога в системе Linux, `/tmp`:
+```
+$ ls -l /tmp
+drwxrwxrwt  19 root root  16K Dec 21 18:58 tmp
+```
+Пользователь, группа и другие имеют полные права доступа. Но может ли обычный пользователь удалить какие-либо файлы внутри этого каталога? Почему так?
+3. Файл с именем `test.sh` имеет следующие разрешения: `-rwsr-xr-x`, что означает, что бит SUID установлен. Теперь выполните следующие команды:
+```
+$ chmod u-x test.sh
+$ ls -l test.sh
+-rwSr-xr-x 1 carol carol 33 Dec 11 10:36 test.sh
+```
+Что мы сделали? Что означает заглавная буква `S`?
+4. Как бы вы создали каталог с именем `Box`, где все файлы автоматически принадлежат пользователям группы и могут быть удалены только пользователем, который их создал?
 
 # Ответы на упражнения для закрепления
 
