Update 104.5 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.5 Manage file permissions and ownership/104.5 Lesson 1.md
@@ -525,6 +525,24 @@ $ ls -l test.sh
 Что мы сделали? Что означает заглавная буква `S`?
 4. Как бы вы создали каталог с именем `Box`, где все файлы автоматически принадлежат пользователям группы и могут быть удалены только пользователем, который их создал?
 
+
+# Резюме
+
+В этом уроке вы узнали, как использовать `ls` для получения (и декодирования) информации о правах доступа к файлам, как контролировать или изменять, кто может создавать, удалять или изменять файл с помощью `chmod`, как в восьмеричном, так и в символьном режимах, как изменить владельца файлов с помощью `chown` и `chgrp` и как запросить и изменить маску разрешений по умолчанию для файлов и каталогов с помощью `umask`
+
+В этом уроке обсуждались следующие команды:
+
+`ls`
+>Выводит список файлов, при желании включая такие сведения, как права доступа.
+`chmod`
+>Меняет права доступа к файлу или каталогу.
+`chown`
+>Меняет пользователя-владельца и/или группу файла или каталога.
+`chgrp`
+>Меняет группу владельцев файла или каталога.
+`umask`
+>Запрашивает или установливает маску прав доступа по умолчанию для файлов и каталогов.
+
 # Ответы на упражнения для закрепления
 
 
